get port from .env

--- a/packages/server-nodejs/public/index.html
+++ b/packages/server-nodejs/public/index.html
@@ -2,11 +2,11 @@
 <html>
 
 <head>
-  <title>Hydra - Default Landing Page</title>
+  <title>Hydra Console - Landing Page</title>
 </head>
 
 <body>
-  <p>Welcome!</p>
+  <p>Welcome to Hydra Console</p>
 </body>
 
 </html>
